ampliate NdP verbali

--- a/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -831,7 +831,7 @@ Spetta al responsabile di progetto convocare le riunioni quando lo ritiene neces
 
 \paragraph{Riunioni esterne} Il responsabile di progetto fissa le riunioni esterne contattando il committente tramite posta elettronica,accordandosi per la data e il luogo da poi riferire ai membri del gruppo. Ad ogni riunione viene chiesto al committente di poter registrare la riunione in modo da poter redigere un verbale accurato e dare la possibilità di riascoltarla anche ad eventuali membri non presenti.Viene nominato anche qui un segretario che scriverà il verbale. Nel caso non fosse stato possibile registrare la riunione il verbale sarà redatto da tutto il team in modo da tralasciare il meno possibile contenuti.
 
-\paragraph{Verbali} I verbali vengono redatti dal segretario (o dal tutto il team, in mancanza di registrazione audio); ogni verbale riassume in modo sintetico ma preciso cosa è stato discusso nella riunione. In particolare specifica:
+\paragraph{Verbali} I verbali vengono redatti dal segretario (o collaborativamente da tutto il gruppo, in mancanza di registrazione audio); ogni verbale riassume in modo sintetico ma preciso cosa è stato discusso nella riunione. In particolare specifica:
 \begin{itemize}
 	\item \textbf{giorno} in cui si è svolta la riunione (nel titolo);
 	\item \textbf{orario} di inizio e fine riunione;
@@ -841,7 +841,7 @@ Spetta al responsabile di progetto convocare le riunioni quando lo ritiene neces
 	\item \textbf{segretario};
 	\item \textbf{partecipanti} alla riunione.
 \end{itemize}
-Dopo aver specificato i suddetti punti, il verbale espone le decisioni prese rispetto agli argomenti trattati, eventuali dubbi o problemi ed eventuali compiti assegnati. Il redattore del verbale deve esporre le decisioni in forma di lista numerata, cosicché ogni decisione possa essere tracciabile; ogni decisione presa in riunione è identificata dal giorno della riunione e dal numero della decisione stessa.
+Dopo aver specificato i suddetti punti, il verbale espone le decisioni prese rispetto agli argomenti trattati, eventuali dubbi o problemi ed eventuali compiti assegnati. Il redattore del verbale deve esporre le decisioni in forma di lista numerata, cosicché ogni decisione possa essere tracciabile; ogni decisione presa in riunione è identificata dal giorno della riunione e dalla sua posizione nella lista numerata. Inoltre, ogni punto della lista deve recare un breve titolo (in grassetto) che ne riassuma il contenuto.
 
 
 \subsubsection{Comunicazioni esterne}
