rev. NdP (pt. 1) + .gitignore + altro

--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -3077,7 +3077,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \endhead
 \hypertarget{RVO1}{RVO1} & l'applicativo deve essere sviluppato tramite tecnologie web. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato \gloss{client} è realizzato in HTML5, \gloss{CSS} e Javascript. & \hyperlink{Capitolato}{Capitolato}\\ \hline
+\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato \gloss{client} è realizzato in HTML5, \gloss{CSS} e JavaScript. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
 \hypertarget{RVO1.2}{RVO1.2} & l'applicativo lato server è realizzato in Java con server \gloss{Tomcat}. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
