--- a/Esterni/Glossario/terminiGlossario.tex
+++ b/Esterni/Glossario/terminiGlossario.tex
@@ -67,7 +67,7 @@
 
 \section H
 \begin{description}
-	\item[Hammer.js] Libreria Javascript che permette di interagire con i contenuti web tramite le azioni classiche di un touch screen.
+	\item[Hammer.js] Libreria JavaScript che permette di interagire con i contenuti web tramite le azioni classiche di un touch screen.
 	\item[HTML] HyperText Markup Language, linguaggio di markup per la strutturazione del contenuto di una pagina web.
 	\item[HTML5] Versione 5 di HTML, che spinge il linguaggio nella direzione del web semantico (con l'aggiunta di nuovi tag) e lo arricchisce di nuove funzionalità interattive.
 	\item[HTTP] HyperText Transfer Protocol, protocollo di comunicazione usato da due macchine che vogliano scambiarsi delle risorse sul web.
