--- a/Esterni/Specifica_tecnica/tex/appjoint.tex
+++ b/Esterni/Specifica_tecnica/tex/appjoint.tex
@@ -1,4 +1,4 @@
-La libreria \jointjs{} è una libreria per diagrammi scritta in Javascript e sviluppata da clientIO (\url{client.io}). Essa è open-source, licenziata sotto Mozilla Public License.
+La libreria \jointjs{} è una libreria per diagrammi scritta in JavaScript e sviluppata da clientIO (\url{client.io}). Essa è open-source, licenziata sotto Mozilla Public License.
 
 Tra alcune funzionalità più di nota si trovano:
 \begin{itemize}
