--- a/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/Esterni/Specifica_tecnica/tex/arch.tex
@@ -104,7 +104,7 @@ Il server offre tre servizi:
 \end{enumerate}
 Questi tre servizi rispettano lo stile architetturale REST (come spiegato più avanti nella sezione \ref{sec:arch_proto}).
 
-Il primo servizio è una semplice pagina HTML, fornita normalmente da Tomcat e arricchita di codice Javascript.
+Il primo servizio è una semplice pagina HTML, fornita normalmente da Tomcat e arricchita di codice JavaScript.
 
 Il secondo e il terzo servizio, invece, sono un programma Java che genera due \emph{servlet}; il programma è organizzato nei seguenti package, come illustrato in figura \ref{fig:server_pkg}:
 \begin{itemize}
