--- a/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/Esterni/Specifica_tecnica/tex/intro.tex
@@ -28,7 +28,7 @@ Riteniamo che l'architettura esposta di seguito, accompagnata da un documento pi
 \begin{itemize}
 	\item E. Gamma, R. Helm, R. Johnson, J. Vlissides, \emph{Design Patterns: Elements of Reusable Object-Oriented Software}.
 	\item A. Osmani, \emph{Developing Backbone.js Applications}.
-	\item A. Osmani, \emph{Learning Javascript Design Patterns}.
+	\item A. Osmani, \emph{Learning JavaScript Design Patterns}.
 	\item Libreria JointJS: \url{www.jointjs.com/opensource}, visitato in data 01/03/2017;
 	\item Libreria \backbonejs: \url{backbonejs.org}, visitato in data 01/03/2017;
 	\item Libreria \jquery: \url{jquery.com}, visitato in data 01/03/2017;
