--- a/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
+++ b/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
@@ -72,7 +72,7 @@ Questo package racchiude le classi che definiscono i principali comandi dell'app
 \item \textbf{Descrizione}\\
 questa classe si occupa di fornire un'istanza di una cella del tipo richiesto da \texttt{NewCellModel}. 
 \item \textbf{Utilizzo}\\
-viene utilizzata da \texttt{NewCellModel} che richiede una nuova cella (blocco o relazione) per avere un'istanza del blocco richiesto. Il design pattern descritto da questa classe è un Factory Pattern, come spiegato nel libro \emph{Learning Javascript Design Patterns} (\url{addyosmani.com/resources/essentialjsdesignpatterns/book/}).
+viene utilizzata da \texttt{NewCellModel} che richiede una nuova cella (blocco o relazione) per avere un'istanza del blocco richiesto. Il design pattern descritto da questa classe è un Factory Pattern, come spiegato nel libro \emph{Learning JavaScript Design Patterns} (\url{addyosmani.com/resources/essentialjsdesignpatterns/book/}).
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::client::model::celltypes::ActivityDiagramElement}]{\nogloxy{\texttt{ActivityDiagramElement}}}\\
