--- a/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -73,7 +73,7 @@
 			
 			\paragraph{Dominio tecnologico}
 			Il capitolato richiede che il sistema sia realizzato con tecnologie Web. In particolare la parte \gloss{server} deve essere realizzata in Java con il server 
-			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser HTML5 ed utilizzare fogli di stile CSS3 per l'aspetto estetico e JavaScript per la parte attiva.
+			\gloss{Tomcat} o in JavaScript con il server \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser HTML5 ed utilizzare fogli di stile CSS3 per l'aspetto estetico e JavaScript per la parte attiva.
 		
 		\subsubsection{Aspetti positivi e negativi}
 		Molti sono stati riconosciuti dal gruppo come gli aspetti positivi di tale progetto:
@@ -275,7 +275,7 @@
 			\paragraph{Dominio tecnologico}
 			Le tecnologie da utilizzarsi nel progetto sono le seguenti:
 			\begin{itemize}
-				\item Javascript versione 6 per la versione dimostrativa da mostrare al proponente e il framework finale;
+				\item JavaScript versione 6 per la versione dimostrativa da mostrare al proponente e il framework finale;
 				\item framework quali \gloss{Angular.js} e React.js sono consigliati per la realizzazione del front-end dell'applicazione;
 				\item \gloss{SCSS} per l'interfaccia utente.
 			\end{itemize}
