--- a/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -28,7 +28,7 @@
 \section{Introduzione}
 
 \subsection{Scopo del documento}
-Questo documento, ad uso interno del gruppo, ha lo scopo di definire le norme che i suoi membri sono tenuti a seguire nel corso dello svolgimento del progetto didattico \proj.
+Questo documento, ad uso interno del gruppo, ha lo scopo di definire le norme che i suoi membri devono seguire nel corso dello svolgimento del progetto didattico \proj.
 
 Ogni membro ha pertanto l'obbligo di prenderne visione e di rispettare le indicazioni in esso contenute, al fine di rendere maggiormente efficiente il lavoro svolto e garantire l'uniformità dei prodotti realizzati.
 
@@ -45,20 +45,20 @@ Il presente documento si divide in tre sezioni principali:
 \begin{itemize}
 	\item La sezione \ref{sec:primari} regola i due processi primari di:
 	\begin{description}
-		\item[fornitura] descritto in §5.2 di ISO/IEC 12207-1995;
-		\item[sviluppo] descritto in §5.3 di ISO/IEC 12207-1995.
+		\item[fornitura] descritto in §5.2 di ISO/IEC 12207:1995;
+		\item[sviluppo] descritto in §5.3 di ISO/IEC 12207:1995.
 	\end{description}
 	\item La sezione \ref{sec:supporto} regola i processi di supporto:
 	\begin{description}
-		\item[documentazione] descritto in §6.1 di ISO/IEC 12207-1995;
-		\item[configurazione] descritto in §6.2 di ISO/IEC 12207-1995;
-		\item[verifica] descritto in §6.4 di ISO/IEC 12207-1995;
-		\item[validazione] descritto in §6.5 di ISO/IEC 12207-1995.
+		\item[documentazione] descritto in §6.1 di ISO/IEC 12207:1995;
+		\item[configurazione] descritto in §6.2 di ISO/IEC 12207:1995;
+		\item[verifica] descritto in §6.4 di ISO/IEC 12207:1995;
+		\item[validazione] descritto in §6.5 di ISO/IEC 12207:1995.
 	\end{description}
 	\item La sezione \ref{sec:organizzativi} regola i processi organizzativi:
 	\begin{description}
-		% \item[strumenti] descritto in §7.2 di ISO/IEC 12207-1995;
-		\item[amministrazione] descritto in §7.1 di ISO/IEC 12207-1995.
+		% \item[strumenti] descritto in §7.2 di ISO/IEC 12207:1995;
+		\item[amministrazione] descritto in §7.1 di ISO/IEC 12207:1995.
 	\end{description}
 \end{itemize}
 
@@ -72,10 +72,10 @@ Il presente documento si divide in tre sezioni principali:
 
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
-	\item ISO/IEC 12207-1995: \url{www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}, visitato in data 08/02/2017;
-	\item Capitolato d'appalto dell'azienda \ZU: \url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017. % normativo o informativo?
-	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html};
-	\item \gloss{API} \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}.
+	\item ISO/IEC 12207:1995: \url{www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}, visitato in data 08/02/2017;
+	\item Capitolato d'appalto dell'azienda \ZU: \url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017.
+	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html}, visitato in data 20/03/2017;
+	\item \gloss{API} \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}, visitato in data 20/03/2017.
 \end{itemize}
 
 \subsubsection{Riferimenti informativi}
@@ -97,9 +97,9 @@ Il presente documento si divide in tre sezioni principali:
 \subsection{Fornitura}
 
 	\subsubsection{Studio di fattibilità}
-	La fase antecedente alla realizzazione del progetto consiste nel fissare delle riunioni in modo che il gruppo possa discutere di esso. È poi compito degli analisti redigere lo studio di fattibilità (\SdF), sulla base di ciò che è emerso dalle riunioni (come ad esempio il dominio applicativo del capitolato).
+	La fase antecedente alla realizzazione del progetto consiste nel fissare delle riunioni in modo che il gruppo possa discutere di esso. È poi compito degli analisti redigere lo Studio di Fattibilità (\SdF), sulla base di ciò che è emerso dalle riunioni (come ad esempio il dominio applicativo del capitolato).
 
-	Lo studio di fattibilità deve presentare l'analisi svolta dai membri del gruppo riguardo ad ogni capitolato. Per ogni capitolato, gli analisti devono inserire le seguenti sezioni:
+	Lo Studio di Fattibilità deve presentare l'analisi svolta dai membri del gruppo riguardo ad ogni capitolato. Per ogni capitolato, gli analisti devono inserire le seguenti sezioni:
 	\begin{description}
 		\item[descrizione breve] presentazione della proposta di capitolato; 
 		\item[dominio applicativo] analisi dell'ambito applicativo della proposta di capitolato; 
@@ -110,19 +110,20 @@ Il presente documento si divide in tre sezioni principali:
 
 \subsection{Sviluppo}
 	\subsubsection{Analisi dei requisiti}
-	Al termine dello studio di fattibilità, è compito degli analisti elencare e analizzare i requisiti del prodotto da sviluppare. Essi devono poi documentare l'analisi nel documento di analisi dei requisiti (\AdR); questo documento contiene i requisiti e i casi d'uso individuati nelle riunioni svolte.
-	Viene elencata nelle sezioni seguenti la struttura obbligatoria di requisiti e casi d'uso.
+	Al termine dello studio di fattibilità, gli analisti devono elencare e analizzare i requisiti del prodotto da sviluppare. Essi devono poi documentare l'analisi nel documento di Analisi dei Requisiti (\AdR); questo documento contiene i requisiti e i \gloss{casi d'uso} individuati nelle riunioni svolte.
+	
+	Nelle sezioni seguenti esponiamo la struttura che gli analisti devono rispettare per specificare requisiti e casi d'uso.
 		\paragraph{Requisiti} 
 		Dopo aver individuato i requisiti tramite le varie riunioni, è compito degli analisti redarne un elenco con la seguente struttura:
 			\[R[Tipo][Importanza][ID]\]
 		dove:
 		\begin{description}
 			\item[Tipo] indica il tipo del requisito, che può essere:
-				\begin{itemize}
-					\item \textbf{F}: funzionale (cioè un servizio che il prodotto è tenuto a fornire);
-					\item \textbf{Q}: di qualità;
-					\item \textbf{P}: prestazionale;
-					\item \textbf{V}: di vincolo.
+			\begin{itemize}
+				\item \textbf{F}: funzionale (cioè un servizio che il prodotto è tenuto a fornire);
+				\item \textbf{Q}: di qualità;
+				\item \textbf{P}: prestazionale;
+				\item \textbf{V}: di vincolo.
 			\end{itemize}
 			\item[Importanza] indica se il requisito è:
 			\begin{itemize}
@@ -144,7 +145,7 @@ Il presente documento si divide in tre sezioni principali:
 			\end{itemize}
 		\end{itemize}
 		\paragraph{Casi d'uso}
-		L'analista deve identificare ogni \gloss{caso d'uso} nel modo seguente:
+		L'analista deve identificare ogni caso d'uso nel modo seguente:
 			\[UCx\]
 		dove $x$ è un numero che identifica il caso d'uso. Ogni macro-caso d'uso sarà poi analizzato in modo più specifico e identificato dalla notazione $UCp.f$, dove $p$ indica il caso d'uso stesso e $f$ un suo figlio; ogni figlio può a sua volta avere altri figli. Inoltre ogni caso d'uso deve avere le seguenti proprietà:
 		\begin{description}
@@ -154,16 +155,16 @@ Il presente documento si divide in tre sezioni principali:
 			\item[precondizioni] condizioni che devono valere prima del caso d'uso;
 			\item[postcondizioni] condizioni che devono valere dopo il caso d'uso;
 			\item[\gloss{scenario} principale] descrizione del caso d'uso tramite i casi d'uso figli;
-			\item[inclusioni] eventuali inclusioni, se specificate;
-			\item[estensioni] eventuali estensioni, se specificate;
+			\item[inclusioni] eventuali inclusioni di altri casi d'uso, se specificate;
+			\item[estensioni] eventuali estensioni di altri casi d'uso, se specificate;
 			\item[scenari alternativi] descrizione tramite casi d'uso non appartenenti al flusso principale.
 		\end{description}
 
 	\subsubsection{Progettazione} \label{sec:design}
-	\paragraph{Attività progettuali} Il lavoro dei progettisti consiste nel progettare il software; nello specifico, questo lavoro si articola in due attività:
+	\paragraph{Attività progettuali} Il lavoro dei progettisti consiste nel progettare struttura e comportamento del software; nello specifico, questo lavoro si articola in due attività:
 	\begin{enumerate}
-		\item \textbf{Progettazione architetturale} (attività descritta in §5.3.5 di ISO/IEC 12207) --- definire l'architettura del sistema, cioè individuare e descrivere le componenti del sistema, esplicitandone i ruoli e le relazioni tra essi; ogni progettista documenta questa attività nel documento di Specifica Tecnica.
-		\item \textbf{Progettazione di dettaglio} (attività descritta in §5.3.6 di ISO/IEC 12207) --- definire, in dettaglio, il \emph{comportamento} delle componenti del sistema; ogni progettista documenta questa attività nel documento di Definizione di Prodotto.
+		\item \textbf{Progettazione architetturale} (descritta in §5.3.5 di ISO/IEC 12207:1995) --- definire l'\emph{architettura} del sistema, cioè individuare e descrivere le componenti del sistema, esplicitandone ruoli e relazioni tra essi; ogni progettista documenta i prodotti di questa attività nel documento di Specifica Tecnica.
+		\item \textbf{Progettazione di dettaglio} (descritta in §5.3.6 di ISO/IEC 12207:1995) --- definire, in dettaglio, il \emph{comportamento} delle componenti del sistema; ogni progettista documenta i prodotti di questa attività nel documento di Definizione di Prodotto.
 	\end{enumerate}
 	Per ognuna di queste due attività, ogni progettista deve definire dei test che permettano la verifica del sistema:
 	\begin{enumerate}
@@ -173,14 +174,14 @@ Il presente documento si divide in tre sezioni principali:
 
 	\paragraph{Diagrammi} Per descrivere l'architettura e il comportamento del sistema i progettisti utilizzano i diagrammi UML descritti qui di seguito, seguendo lo standard UML 2.0:
 	\begin{itemize}
-		\item Diagramma dei \gloss{package}: raggruppa un numero di elementi UML in una sola unità di livello più alto.
-		\item \gloss{Diagramma delle classi}: descrive le interfacce delle componenti del sistema e le relazioni tra esse.
-		\item \gloss{Diagramma delle attività}: descrive i passi di una procedura.
+		\item Diagramma dei \gloss{package} --- raggruppa un numero di elementi UML in una sola unità di livello più alto.
+		\item \gloss{Diagramma delle classi} --- descrive le interfacce delle componenti del sistema e le relazioni tra esse.
+		\item \gloss{Diagramma delle attività} --- descrive i passi di una procedura.
 		\item Diagramma di sequenza: descrive uno scenario, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 	\end{itemize}
 	Per disegnare i diagrammi appena esposti, i progettisti devono usare il software \gloss{Astah} ed esportare i diagrammi in formato PNG.
 
-	\paragraph{Stile di progettazione} L'architettura di \proj{} è segue lo stile dell'\textbf{orientazione agli oggetti}; perciò, le componenti software descritte nei diagrammi delle classi sono:
+	\paragraph{Stile di progettazione} L'architettura di \proj{} segue lo stile dell'\textbf{orientazione agli oggetti}; perciò, le componenti software descritte nei diagrammi delle classi sono:
 	\begin{itemize}
 		\item classi Java;
 		\item prototipi di oggetti JavaScript.
@@ -193,23 +194,23 @@ Il presente documento si divide in tre sezioni principali:
 	Al fine di aumentare la manutenibilità del sistema, i progettisti devono seguire le seguenti regole:
 	\begin{itemize}
 		\item ogni libreria esterna dev'essere utilizzata come puro servizio: non è possibile modificarne il codice (questo per problemi di tempo);
-		\item quando una classe si interfaccia con un'altra, essa non deve conoscere una particolare classe concreta ma soltanto un suo \emph{tipo}, cioè un'interfaccia o una classe astratta;
+		\item quando una classe si interfaccia con un'altra, essa non deve conoscere una particolare classe concreta ma soltanto il suo \emph{tipo}, cioè un'interfaccia o una classe astratta;
 		\item ogni componente deve avere un compito ben preciso, ricavabile dal proprio nome e dai metodi che costituiscono la propria interfaccia;
 		\item i progettisti devono assumere di conoscere soltanto il tipo statico di un oggetto, non il suo tipo dinamico;
-		\item i progettisti devono definire solo metodi di istanza (quindi non statici);
+		\item i progettisti devono definire solo metodi di istanza (quindi non statici), eccettuato il metodo \texttt{main} del \emph{controller} Java del \emph{back end};
 		\item se una classe $A$ estende il contratto di una classe $B$, allora dev'essere possibile affermare che “ogni $A$ è un $B$”;
 		\item i campi dati di ogni classe Java devono essere privati.
 	\end{itemize}
 
 	\paragraph{Nomenclatura} Al fine di uniformare il codice che verrà derivato dalla progettazione, i progettisti devono osservare le seguenti norme di nomenclatura:
 	\begin{itemize}
-		\item i componenti vanno raggruppati in moduli (\emph{package}, in Java) con un nome; tale nome:
+		\item le componenti vanno raggruppate in moduli (\emph{package}, in Java) con un nome; tale nome:
 		\begin{itemize}
 			\item è in lingua inglese;
 			\item contiene solo caratteri alfanumerici;
-			\item ha iniziale bassa;
+			\item non contiene lettere alte;
 			\item reca il nome dell'eventuale modulo “padre” che lo contiene, preposto al proprio nome e seguito da una coppia di \emph{due punti} (\texttt{::});
-			\item è rappresentativo del ruolo del modulo nel sistema;
+			\item è rappresentativo del ruolo del modulo all'interno del sistema;
 			\item è preferibilmente un sostantivo.
 		\end{itemize}
 		\item ogni componente ha un nome; tale nome:
@@ -218,7 +219,7 @@ Il presente documento si divide in tre sezioni principali:
 			\item contiene solo caratteri alfanumerici;
 			\item ha iniziale alta;
 			\item se composto di più termini, ha l'iniziale di ogni termine alta;
-			\item è rappresentativo del ruolo della componente nel sistema;
+			\item è rappresentativo del ruolo della componente all'interno del sistema;
 			\item non può essere un termine riservato dei linguaggi Java o JavaScript;
 			\item non può essere più lungo di 30 caratteri;
 			\item è preferibilmente un sostantivo (eventualmente composto).
@@ -228,8 +229,8 @@ Il presente documento si divide in tre sezioni principali:
 			\item è in lingua inglese;
 			\item contiene solo caratteri alfanumerici;
 			\item ha iniziale bassa;
-			\item se composto di più termini, ha l'iniziale di ogni termine alta, tranne quella del primo termine;
-			\item è rappresentativo della funzione del metodo nella classe;
+			\item se composto di più termini ha l'iniziale di ogni termine alta, tranne quella del primo termine;
+			\item è rappresentativo del servizio che il metodo offre;
 			\item non può essere un termine riservato dei linguaggi Java o JavaScript;
 			\item non può essere più lungo di 20 caratteri;
 			\item è preferibilmente un verbo (eventualmente composto).
@@ -248,11 +249,11 @@ Il presente documento si divide in tre sezioni principali:
 		\item i nomi di classi e metodi o funzioni devono essere quelli adottati dai progettisti nei documenti di Specifica Tecnica e di Definizione di Prodotto;
 		\item i programmatori possono introdurre funzioni ausiliarie non presenti nella progettazione del software;
 		\item i programmatori \textbf{non} possono introdurre classi ausiliarie non presenti nella progettazione del software;
-		\item i nomi di variabili locali devono seguire le stesse norme di nomenclatura dei metodi, definite in \ref{sec:norme_design}, tranne che devono essere preferibilmente dei sostantivi.
+		\item i nomi di variabili locali devono seguire le stesse norme di nomenclatura dei metodi, definite in \ref{sec:design}, tranne che devono essere preferibilmente dei sostantivi.
 	\end{itemize}
 	
 	\paragraph{Ricorsione}
-	Bisogna sempre evitare la ricorsione. Nel caso fosse molto difficile trovare un metodo iterativo equivalente, è obbligatorio fornire una prova di terminazione dell'algoritmo ricorsivo.
+	Il programmatore deve evitare la ricorsione. Nel caso fosse molto difficile trovare un metodo iterativo equivalente, egli è tenuto a fornire una prova di terminazione dell'algoritmo ricorsivo.
 
 	\paragraph{Documentazione del codice}
 	Per facilitare la manutenibilità del codice, i programmatori devono rispettare le seguenti norme sulla documentazione:
@@ -280,7 +281,7 @@ Il presente documento si divide in tre sezioni principali:
 		* @since Versione del prodotto dalla quale è presente il file
 		*/
 		\end{verbatim}
-		\item Per documentazione di inizio file in Javascript rispettare sempre la struttura descritta per i file \texttt{.java} al punto sopra.
+		\item Per documentazione di inizio file in JavaScript rispettare sempre la struttura descritta per i file \texttt{.java} al punto sopra.
 		\item all'inizio di ogni metodo Java si inserisce un commento con la struttura descritta in seguito:
 		\begin{verbatim}
 		/** 
@@ -480,8 +481,8 @@ La configurazione del nostro software si compone dei seguenti elementi:
 \end{itemize}
 Ogni elemento della configurazione (quindi la directory per il codice e il singolo file per i documenti) deve avere una versione, che lo identifica nel tempo. La versione si compone di tre numeri separati da un punto: il primo viene incrementato ad ogni \textbf{approvazione} dell'elemento da parte del responsabile di progetto; il secondo ad ogni sua \textbf{revisione} da parte di un verificatore; il terzo ad ogni \textbf{aggiunta o modifica} sostanziale ad esso. L'incremento di un numero azzera i numeri alla sua destra.
 
-\subsubsection{Controllo della configurazione} I cambiamenti \emph{sostanziali} nella configurazione del software vanno controllati e registrati; essi possono nascere dal piano di progetto o dall'iniziativa di un membro.
-\paragraph{Cambiamenti pianificati} I cambiamenti pianificati nascono dal piano di progetto. In questo caso il cambiamento è già controllato quindi basta registrarlo aggiornando la versione dell'elemento che è cambiato nella configurazione.
+\subsubsection{Controllo della configurazione} I cambiamenti \emph{sostanziali} nella configurazione del software vanno controllati e registrati; essi possono nascere dal Piano di Progetto o dall'iniziativa di un membro.
+\paragraph{Cambiamenti pianificati} I cambiamenti pianificati nascono dal Piano di Progetto. In questo caso il cambiamento è già controllato quindi basta registrarlo aggiornando la versione dell'elemento che è cambiato nella configurazione.
 \paragraph{Cambiamenti non pianificati} I cambiamenti \emph{non} pianificati nascono dall'iniziativa di un membro. Un cambiamento di questo tipo va proposto agli altri membri del gruppo sull'apposito canale \gloss{Slack}; nel caso la maggioranza sia d'accordo e riesca a fornire una motivazione del cambiamento, il responsabile di progetto incarica un amministratore di implementarlo e motivarlo nella documentazione.
 \paragraph{Branching} Nel caso si debba cambiare un elemento della configurazione da cui dipendono altri elementi --- modificando quindi gli elementi dipendenti --- il membro del gruppo che è stato incaricato di tale cambiamento deve creare un branch nel repository. Un branch (ramo) sottosta alle seguenti regole:
 \begin{itemize}
@@ -660,7 +661,7 @@ La verifica è un processo analitico che va implementato in due passi successivi
 Ogni verifica di una parte della configurazione dev'essere vagliata dal responsabile di progetto; per questo, il responsabile deve controllare i risultati dei test. Egli può approvarli oppure chiedere ai verificatori di ripeterli. L'approvazione determina:
 \begin{itemize}
 	\item l'incremento del numero di versione, secondo le norme in sezione \ref{sec:idvers};
-	\item la pubblicazione dei componenti validati e dei test eseguiti sul ramo \texttt{master} del repository.
+	\item la pubblicazione delle componenti validate e dei test eseguiti sul ramo \texttt{master} del repository.
 \end{itemize}
 
 
@@ -691,9 +692,9 @@ In particolare ha responsabilità riguardo a:
 \end{itemize}
 I suoi compiti saranno quindi:
 \begin{itemize}
-	\item Redigere organigramma e il piano di progetto;
-	\item Collaborare nella stesura del piano di qualifica;
-	\item Assicurarsi che le attività svolte seguano le indicazioni delle norme di progetto;
+	\item Redigere organigramma e il Piano di Progetto;
+	\item Collaborare nella stesura del Piano di Qualifica;
+	\item Assicurarsi che le attività svolte seguano le indicazioni delle Norme di Progetto;
 	\item Garantire che vengano rispettati i ruoli;
 	\item Evitare conflitti di interesse tra redattori e verificatori;
 	\item Assegnare e gestire task agli altri membri del gruppo;
@@ -709,7 +710,7 @@ I suoi compiti sono quindi:
 	\item Controllo versioni e configurazioni del prodotto;
 	\item Risoluzione problemi riguardanti la gestione delle risorse e dei processi.
 \end{itemize}
-L'amministratore è incaricato di redigere le norme di progetto, la parte del piano di qualifica riguardante metodi e strumenti di verifica e collabora alla stesura del piano di progetto.
+L'amministratore è incaricato di redigere le Norme di Progetto, la parte del Piano di Qualifica riguardante metodi e strumenti di verifica e collabora alla stesura del Piano di Progetto.
 \paragraph{Analista}
 L'analista è responsabile di tutto quello che riguarda l'analisi del problema.
 In particolare dovrà:
@@ -718,9 +719,9 @@ In particolare dovrà:
 	\item Classificare requisiti;
 	\item Redigere diagrammi dei casi d'uso
 	\item Produrre una specifica di progetto precisa in ogni sui punto e comprensibile dal proponente, dal committente e dai progettisti.
-	\item Redigere lo studio di fattibilità e l'analisi dei requisiti.
+	\item Redigere lo Studio di Fattibilità e l'Analisi dei Requisiti.
 \end{itemize}
-L'analista redige lo studio di fattibilità e l'analisi dei requisiti.
+L'analista redige lo Studio di Fattibilità e l'Analisi dei Requisiti.
 \paragraph{Progettista}
 Il progettista è responsabile delle attività di progettazione. Si occupa più in dettaglio di:
 \begin{itemize}
@@ -728,7 +729,7 @@ Il progettista è responsabile delle attività di progettazione. Si occupa più 
 	\item effettuare scelte procedurali volte ad avere un prodotto facilmente espandibile e mantenibile;
 	\item produrre una soluzione comprensibile e soddisfacente per il committente.
 \end{itemize}
-Il progettista redige la specifica tecnica, la definizione di prodotto e le sezioni del piano di qualifica riguardanti le metriche delle attività di verifica della programmazione.
+Il progettista redige la specifica tecnica, la definizione di prodotto e le sezioni del Piano di Qualifica riguardanti le metriche delle attività di verifica della programmazione.
 \paragraph{Programmatore}
 Il programmatore è responsabile delle attività di codifica e delle commenti ausiliarie necessari per il processo di verifica.
 In particolare i suoi compiti sono:
@@ -745,7 +746,7 @@ I suoi compiti sono:
 	\item Controllare la conformità del prodotto ad ogni stadio del sup ciclo di vita;
 	\item garantire che le attività attuate seguano le norme stabilite.
 \end{itemize}
-Il \emph{verificatore} redige la sezione del piano di qualifica che illustra l'esito delle verifiche effettuate.
+Il \emph{verificatore} redige la sezione del Piano di Qualifica che illustra l'esito delle verifiche effettuate.
 
 
 \subsubsection{Pianificazione}
@@ -808,7 +809,7 @@ Attualmente sono state create le seguenti colonne:
 InstaGantt permette di visualizzare i vari task in un asse temporale, producendo così un \gloss{diagramma di Gantt}. 
 Vanno rispettate le seguenti convenzioni:
 \begin{itemize}
-	\item Il nome di ogni task o sottotask deve essere univoco; per alcuni task ripetuti, come ad esempio l'incremento di un certo documento, si inserisce in coda la revisione che lo richiede (ad esempio "Incremento Piano di Qualifica [RP]" significa che il piano di qualifica è stato incrementato a causa della deadline della revisione di progettazione del \TV).
+	\item Il nome di ogni task o sottotask deve essere univoco; per alcuni task ripetuti, come ad esempio l'incremento di un certo documento, si inserisce in coda la revisione che lo richiede (ad esempio "Incremento Piano di Qualifica [RP]" significa che il Piano di Qualifica è stato incrementato a causa della deadline della revisione di progettazione del \TV).
 	\item Ogni task di livello più basso dev'essere contrassegnato da un tag che sancisce il ruolo che una persona adotta per quel task; i ruoli sono quelli in sezione \ref{sec:ruoli}, identici a quelli definiti in \PdP.
 	\item Ogni task di livello superiore che produce un documento possiede il tag \texttt{Documento}; questo task è assegnato all'utente virtuale \texttt{Hivex Team}.
 	\item I vari cicli di incremento vanno pianificati come task appartenenti allo stesso livello.
