rev. NdP (pt. 2)

--- a/Esterni/Glossario/terminiGlossario.tex
+++ b/Esterni/Glossario/terminiGlossario.tex
@@ -161,7 +161,7 @@
 \begin{description}
 	\item[text-to-speech] Tecnica per la riproduzione artificiale della voce umana.
 	\item[Tomcat] Application server nella forma di contenitore servlet open-source. Esso implementa le specifiche JavaServer Pages (JSP) e Servlet e fornisce quindi una piattaforma software per l'esecuzione di applicazioni Web sviluppate in linguaggio Java.
-	\item[Travis] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
+	\item[Travis CI] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
 	\item[Trello] Servizio utilizzato per coordinare le attività di project management.
 \end{description}
 
